K8s/api_gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apigateway-deployment
  labels:
    app: apigateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apigateway
  template:
    metadata:
      labels:
        app: apigateway
    spec:
      containers:
        - name: apigateway
          image: eyadzz/dexam_api_gateway:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5500
---
apiVersion: v1
kind: Service
metadata:
  name: apigateway-service
spec:
  selector:
    app: apigateway
  type: LoadBalancer
  ports:
    - port: 5500
      protocol: TCP
      targetPort: 5500
      nodePort: 30011
