K8s/course.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: course-deployment
  labels:
    app: dexam-course
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dexam-course
  template:
    metadata:
      labels:
        app: dexam-course
    spec:
      containers:
        - name: dexam-course
          image: eyadzz/dexam_course_service:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: course-service
spec:
  selector:
    app: dexam-course
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
