K8s/exam.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exam-deployment
  labels:
    app: dexam-exam
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dexam-exam
  template:
    metadata:
      labels:
        app: dexam-exam
    spec:
      containers:
        - name: dexam-exam
          image: eyadzz/dexam_exam_service:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: exam-service
spec:
  selector:
    app: dexam-exam
  type: LoadBalancer
  ports:
    - port: 8888
      protocol: TCP
      targetPort: 8888
      nodePort: 30012
