K8s/imguploader.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uploader-deployment
  labels:
    app: dexam-uploader
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dexam-uploader
  template:
    metadata:
      labels:
        app: dexam-uploader
    spec:
      containers:
        - name: dexam-uploader
          image: eyadzz/dexam_image_uploader_service:latest
          ports:
            - containerPort: 7777
---
apiVersion: v1
kind: Service
metadata:
  name: uploader-service
spec:
  selector:
    app: dexam-uploader
  ports:
    - port: 7777
      protocol: TCP
      targetPort: 7777
