K8s/overseer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: overseerservice-deployment
  labels:
    app: dexam-overseer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dexam-overseer
  template:
    metadata:
      labels:
        app: dexam-overseer
    spec:
      containers:
        - name: dexam-overseer
          image: eyadzz/dexam_overseer_service:latest
          ports:
            - containerPort: 9999
---

apiVersion: v1
kind: Service
metadata:
  name: overseer-service
spec:
  selector:
    app: dexam-overseer
  ports:
    - port: 9999
      protocol: TCP
      targetPort: 9999
  externalIPs:
    - 20.106.105.25
