K8s/rabbit.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
spec:
  selector:
    matchLabels:
      app: rabbitmq
  
  template:
    metadata:
      labels:
        app: rabbitmq
    
    spec:
      containers:
      - name: rabbitmq
        image: rabbitmq:3-management
        ports:
        - containerPort: 5672
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
spec:
  selector:
    app: rabbitmq
  type: LoadBalancer
  ports:
    - port: 5672
      protocol: TCP
      targetPort: 5672
