K8s/redis.yaml

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis-set
  labels:
    app: redis-db
spec:
  replicas: 2
  serviceName: "redis-service"
  selector:
    matchLabels:
      app: redis-db
  template:
    metadata:
      labels:
        app: redis-db
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: redis-db
          image: redis/redis-stack
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: redis-store
              mountPath: /data/redis
  volumeClaimTemplates:
    - metadata:
        name: redis-store
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 5Gi

---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  selector:
    app: redis-db
  ports:
    - port: 6379
      protocol: TCP
      targetPort: 6379
