K8s/user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userservice-deployment
  labels:
    app: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: eyadzz/dexam_user_service:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: userservice-service
spec:
  selector:
    app: user-service
  type: LoadBalancer
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
      nodePort: 30001
