K8s/user.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-deployment
  labels:
    app: dexam-user
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dexam-user
  template:
    metadata:
      labels:
        app: dexam-user
    spec:
      containers:
        - name: dexam-user
          image: eyadzz/dexam_user_service:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  selector:
    app: dexam-user
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
