K8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kong-gateway
  annotations:
    kubernetes.io/ingress.class: kong
    plugins.konghq.com: kong-cors
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /api/users
        pathType: ImplementationSpecific
        backend:
          service:
            name: user-service
            port:
              number: 8080

      - path: /api/courses
        pathType: ImplementationSpecific
        backend:
          service:
            name: course-service
            port:
              number: 80

      - path: /api/exam
        pathType: ImplementationSpecific
        backend:
          service:
            name: exam-service
            port:
              number: 8888
      
      - path: /verify/
        pathType: ImplementationSpecific
        backend:
          service:
            name: fr-service
            port:
              number: 8001

      - path: /ws
        pathType: ImplementationSpecific
        backend:
          service:
            name: overseer-service
            port:
              number: 9999
      
      - path: /api
        pathType: ImplementationSpecific
        backend:
          service:
            name: uploader-service
            port:
              number: 7777
